src/main/java/tools/xor/util/xpath/XPathParser.java
// $ANTLR 3.5.2 XPath.g 2014-07-31 11:35:01
package tools.xor.util.xpath;
import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class XPathParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ABBRSTEP", "ABRPATH", "ABSOLUTE", 
		"APOS", "AT", "AXIS", "AxisName", "CC", "COLON", "COMMA", "DOT", "DOTDOT", 
		"Digits", "EXPR", "GE", "LBRAC", "LE", "LESS", "LOCATION", "LPAR", "Literal", 
		"MINUS", "MORE", "MUL", "NCName", "NCNameChar", "NCNameStartChar", "NODE", 
		"NodeType", "Number", "PATHSEP", "PIPE", "PLUS", "PREDICATE", "QUOT", 
		"RBRAC", "ROOT", "RPAR", "Whitespace", "'!='", "'$'", "'='", "'and'", 
		"'div'", "'mod'", "'or'", "'processing-instruction'"
	};
	public static final int EOF=-1;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int ABBRSTEP=4;
	public static final int ABRPATH=5;
	public static final int ABSOLUTE=6;
	public static final int APOS=7;
	public static final int AT=8;
	public static final int AXIS=9;
	public static final int AxisName=10;
	public static final int CC=11;
	public static final int COLON=12;
	public static final int COMMA=13;
	public static final int DOT=14;
	public static final int DOTDOT=15;
	public static final int Digits=16;
	public static final int EXPR=17;
	public static final int GE=18;
	public static final int LBRAC=19;
	public static final int LE=20;
	public static final int LESS=21;
	public static final int LOCATION=22;
	public static final int LPAR=23;
	public static final int Literal=24;
	public static final int MINUS=25;
	public static final int MORE=26;
	public static final int MUL=27;
	public static final int NCName=28;
	public static final int NCNameChar=29;
	public static final int NCNameStartChar=30;
	public static final int NODE=31;
	public static final int NodeType=32;
	public static final int Number=33;
	public static final int PATHSEP=34;
	public static final int PIPE=35;
	public static final int PLUS=36;
	public static final int PREDICATE=37;
	public static final int QUOT=38;
	public static final int RBRAC=39;
	public static final int ROOT=40;
	public static final int RPAR=41;
	public static final int Whitespace=42;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public XPathParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public XPathParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return XPathParser.tokenNames; }
	@Override public String getGrammarFileName() { return "XPath.g"; }


	public static class main_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "main"
	// XPath.g:57:1: main : expr -> ^( ROOT expr ) ;
	public final XPathParser.main_return main() throws RecognitionException {
		XPathParser.main_return retval = new XPathParser.main_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope expr1 =null;

		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");

		try {
			// XPath.g:57:7: ( expr -> ^( ROOT expr ) )
			// XPath.g:57:10: expr
			{
			pushFollow(FOLLOW_expr_in_main316);
			expr1=expr();
			state._fsp--;

			stream_expr.add(expr1.getTree());
			// AST REWRITE
			// elements: expr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 57:15: -> ^( ROOT expr )
			{
				// XPath.g:57:18: ^( ROOT expr )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ROOT, "ROOT"), root_1);
				adaptor.addChild(root_1, stream_expr.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "main"


	public static class locationPathI_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "locationPathI"
	// XPath.g:60:1: locationPathI : locationPath -> ^( LOCATION locationPath ) ;
	public final XPathParser.locationPathI_return locationPathI() throws RecognitionException {
		XPathParser.locationPathI_return retval = new XPathParser.locationPathI_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope locationPath2 =null;

		RewriteRuleSubtreeStream stream_locationPath=new RewriteRuleSubtreeStream(adaptor,"rule locationPath");

		try {
			// XPath.g:61:3: ( locationPath -> ^( LOCATION locationPath ) )
			// XPath.g:61:6: locationPath
			{
			pushFollow(FOLLOW_locationPath_in_locationPathI338);
			locationPath2=locationPath();
			state._fsp--;

			stream_locationPath.add(locationPath2.getTree());
			// AST REWRITE
			// elements: locationPath
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 61:19: -> ^( LOCATION locationPath )
			{
				// XPath.g:61:22: ^( LOCATION locationPath )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(LOCATION, "LOCATION"), root_1);
				adaptor.addChild(root_1, stream_locationPath.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "locationPathI"


	public static class locationPath_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "locationPath"
	// XPath.g:64:1: locationPath : ( relativeLocationPath | absolutePathI relativeLocationPath );
	public final XPathParser.locationPath_return locationPath() throws RecognitionException {
		XPathParser.locationPath_return retval = new XPathParser.locationPath_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope relativeLocationPath3 =null;
		ParserRuleReturnScope absolutePathI4 =null;
		ParserRuleReturnScope relativeLocationPath5 =null;


		try {
			// XPath.g:65:3: ( relativeLocationPath | absolutePathI relativeLocationPath )
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==AT||LA1_0==AxisName||(LA1_0 >= DOT && LA1_0 <= DOTDOT)||(LA1_0 >= MUL && LA1_0 <= NCName)||LA1_0==NodeType||LA1_0==50) ) {
				alt1=1;
			}
			else if ( (LA1_0==ABRPATH||LA1_0==PATHSEP) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// XPath.g:65:6: relativeLocationPath
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_relativeLocationPath_in_locationPath361);
					relativeLocationPath3=relativeLocationPath();
					state._fsp--;

					adaptor.addChild(root_0, relativeLocationPath3.getTree());

					}
					break;
				case 2 :
					// XPath.g:66:6: absolutePathI relativeLocationPath
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_absolutePathI_in_locationPath368);
					absolutePathI4=absolutePathI();
					state._fsp--;

					adaptor.addChild(root_0, absolutePathI4.getTree());

					pushFollow(FOLLOW_relativeLocationPath_in_locationPath370);
					relativeLocationPath5=relativeLocationPath();
					state._fsp--;

					adaptor.addChild(root_0, relativeLocationPath5.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "locationPath"


	public static class absolutePathI_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "absolutePathI"
	// XPath.g:69:1: absolutePathI : absolutePath -> ^( ABSOLUTE absolutePath ) ;
	public final XPathParser.absolutePathI_return absolutePathI() throws RecognitionException {
		XPathParser.absolutePathI_return retval = new XPathParser.absolutePathI_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope absolutePath6 =null;

		RewriteRuleSubtreeStream stream_absolutePath=new RewriteRuleSubtreeStream(adaptor,"rule absolutePath");

		try {
			// XPath.g:70:3: ( absolutePath -> ^( ABSOLUTE absolutePath ) )
			// XPath.g:70:6: absolutePath
			{
			pushFollow(FOLLOW_absolutePath_in_absolutePathI384);
			absolutePath6=absolutePath();
			state._fsp--;

			stream_absolutePath.add(absolutePath6.getTree());
			// AST REWRITE
			// elements: absolutePath
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 70:19: -> ^( ABSOLUTE absolutePath )
			{
				// XPath.g:70:22: ^( ABSOLUTE absolutePath )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ABSOLUTE, "ABSOLUTE"), root_1);
				adaptor.addChild(root_1, stream_absolutePath.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "absolutePathI"


	public static class absolutePath_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "absolutePath"
	// XPath.g:73:1: absolutePath : ( '/' | '//' );
	public final XPathParser.absolutePath_return absolutePath() throws RecognitionException {
		XPathParser.absolutePath_return retval = new XPathParser.absolutePath_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set7=null;

		Object set7_tree=null;

		try {
			// XPath.g:74:3: ( '/' | '//' )
			// XPath.g:
			{
			root_0 = (Object)adaptor.nil();


			set7=input.LT(1);
			if ( input.LA(1)==ABRPATH||input.LA(1)==PATHSEP ) {
				input.consume();
				adaptor.addChild(root_0, (Object)adaptor.create(set7));
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "absolutePath"


	public static class relativeLocationPath_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "relativeLocationPath"
	// XPath.g:77:1: relativeLocationPath : step ( ( '/' | '//' ) step )* ;
	public final XPathParser.relativeLocationPath_return relativeLocationPath() throws RecognitionException {
		XPathParser.relativeLocationPath_return retval = new XPathParser.relativeLocationPath_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set9=null;
		ParserRuleReturnScope step8 =null;
		ParserRuleReturnScope step10 =null;

		Object set9_tree=null;

		try {
			// XPath.g:78:3: ( step ( ( '/' | '//' ) step )* )
			// XPath.g:78:6: step ( ( '/' | '//' ) step )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_step_in_relativeLocationPath424);
			step8=step();
			state._fsp--;

			adaptor.addChild(root_0, step8.getTree());

			// XPath.g:78:11: ( ( '/' | '//' ) step )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==ABRPATH||LA2_0==PATHSEP) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// XPath.g:78:12: ( '/' | '//' ) step
					{
					set9=input.LT(1);
					if ( input.LA(1)==ABRPATH||input.LA(1)==PATHSEP ) {
						input.consume();
						adaptor.addChild(root_0, (Object)adaptor.create(set9));
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_step_in_relativeLocationPath433);
					step10=step();
					state._fsp--;

					adaptor.addChild(root_0, step10.getTree());

					}
					break;

				default :
					break loop2;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "relativeLocationPath"


	public static class step_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "step"
	// XPath.g:81:1: step : ( axisSpecifierI nodeTestI ( predicateI )* | abbreviatedStepI );
	public final XPathParser.step_return step() throws RecognitionException {
		XPathParser.step_return retval = new XPathParser.step_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope axisSpecifierI11 =null;
		ParserRuleReturnScope nodeTestI12 =null;
		ParserRuleReturnScope predicateI13 =null;
		ParserRuleReturnScope abbreviatedStepI14 =null;


		try {
			// XPath.g:81:7: ( axisSpecifierI nodeTestI ( predicateI )* | abbreviatedStepI )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==AT||LA4_0==AxisName||(LA4_0 >= MUL && LA4_0 <= NCName)||LA4_0==NodeType||LA4_0==50) ) {
				alt4=1;
			}
			else if ( ((LA4_0 >= DOT && LA4_0 <= DOTDOT)) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// XPath.g:81:10: axisSpecifierI nodeTestI ( predicateI )*
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_axisSpecifierI_in_step448);
					axisSpecifierI11=axisSpecifierI();
					state._fsp--;

					adaptor.addChild(root_0, axisSpecifierI11.getTree());

					pushFollow(FOLLOW_nodeTestI_in_step450);
					nodeTestI12=nodeTestI();
					state._fsp--;

					adaptor.addChild(root_0, nodeTestI12.getTree());

					// XPath.g:81:35: ( predicateI )*
					loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( (LA3_0==LBRAC) ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// XPath.g:81:35: predicateI
							{
							pushFollow(FOLLOW_predicateI_in_step452);
							predicateI13=predicateI();
							state._fsp--;

							adaptor.addChild(root_0, predicateI13.getTree());

							}
							break;

						default :
							break loop3;
						}
					}

					}
					break;
				case 2 :
					// XPath.g:82:6: abbreviatedStepI
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_abbreviatedStepI_in_step460);
					abbreviatedStepI14=abbreviatedStepI();
					state._fsp--;

					adaptor.addChild(root_0, abbreviatedStepI14.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "step"


	public static class axisSpecifierI_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "axisSpecifierI"
	// XPath.g:85:1: axisSpecifierI : axisSpecifier -> ^( AXIS ( axisSpecifier )? ) ;
	public final XPathParser.axisSpecifierI_return axisSpecifierI() throws RecognitionException {
		XPathParser.axisSpecifierI_return retval = new XPathParser.axisSpecifierI_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope axisSpecifier15 =null;

		RewriteRuleSubtreeStream stream_axisSpecifier=new RewriteRuleSubtreeStream(adaptor,"rule axisSpecifier");

		try {
			// XPath.g:86:3: ( axisSpecifier -> ^( AXIS ( axisSpecifier )? ) )
			// XPath.g:86:6: axisSpecifier
			{
			pushFollow(FOLLOW_axisSpecifier_in_axisSpecifierI474);
			axisSpecifier15=axisSpecifier();
			state._fsp--;

			stream_axisSpecifier.add(axisSpecifier15.getTree());
			// AST REWRITE
			// elements: axisSpecifier
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 86:20: -> ^( AXIS ( axisSpecifier )? )
			{
				// XPath.g:86:23: ^( AXIS ( axisSpecifier )? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(AXIS, "AXIS"), root_1);
				// XPath.g:86:30: ( axisSpecifier )?
				if ( stream_axisSpecifier.hasNext() ) {
					adaptor.addChild(root_1, stream_axisSpecifier.nextTree());
				}
				stream_axisSpecifier.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "axisSpecifierI"


	public static class axisSpecifier_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "axisSpecifier"
	// XPath.g:89:1: axisSpecifier : ( AxisName '::' | ( '@' )? );
	public final XPathParser.axisSpecifier_return axisSpecifier() throws RecognitionException {
		XPathParser.axisSpecifier_return retval = new XPathParser.axisSpecifier_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token AxisName16=null;
		Token string_literal17=null;
		Token char_literal18=null;

		Object AxisName16_tree=null;
		Object string_literal17_tree=null;
		Object char_literal18_tree=null;

		try {
			// XPath.g:90:3: ( AxisName '::' | ( '@' )? )
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==AxisName) ) {
				int LA6_1 = input.LA(2);
				if ( (LA6_1==CC) ) {
					alt6=1;
				}
				else if ( (LA6_1==EOF||LA6_1==ABRPATH||(LA6_1 >= COLON && LA6_1 <= COMMA)||(LA6_1 >= GE && LA6_1 <= LESS)||(LA6_1 >= MINUS && LA6_1 <= MUL)||(LA6_1 >= PATHSEP && LA6_1 <= PLUS)||LA6_1==RBRAC||LA6_1==RPAR||LA6_1==43||(LA6_1 >= 45 && LA6_1 <= 49)) ) {
					alt6=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA6_0==AT||(LA6_0 >= MUL && LA6_0 <= NCName)||LA6_0==NodeType||LA6_0==50) ) {
				alt6=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}

			switch (alt6) {
				case 1 :
					// XPath.g:90:6: AxisName '::'
					{
					root_0 = (Object)adaptor.nil();


					AxisName16=(Token)match(input,AxisName,FOLLOW_AxisName_in_axisSpecifier497); 
					AxisName16_tree = (Object)adaptor.create(AxisName16);
					adaptor.addChild(root_0, AxisName16_tree);

					string_literal17=(Token)match(input,CC,FOLLOW_CC_in_axisSpecifier499); 
					string_literal17_tree = (Object)adaptor.create(string_literal17);
					adaptor.addChild(root_0, string_literal17_tree);

					}
					break;
				case 2 :
					// XPath.g:91:6: ( '@' )?
					{
					root_0 = (Object)adaptor.nil();


					// XPath.g:91:6: ( '@' )?
					int alt5=2;
					int LA5_0 = input.LA(1);
					if ( (LA5_0==AT) ) {
						alt5=1;
					}
					switch (alt5) {
						case 1 :
							// XPath.g:91:6: '@'
							{
							char_literal18=(Token)match(input,AT,FOLLOW_AT_in_axisSpecifier506); 
							char_literal18_tree = (Object)adaptor.create(char_literal18);
							adaptor.addChild(root_0, char_literal18_tree);

							}
							break;

					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "axisSpecifier"


	public static class nodeTestI_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "nodeTestI"
	// XPath.g:94:1: nodeTestI : nodeTest -> ^( NODE nodeTest ) ;
	public final XPathParser.nodeTestI_return nodeTestI() throws RecognitionException {
		XPathParser.nodeTestI_return retval = new XPathParser.nodeTestI_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope nodeTest19 =null;

		RewriteRuleSubtreeStream stream_nodeTest=new RewriteRuleSubtreeStream(adaptor,"rule nodeTest");

		try {
			// XPath.g:95:3: ( nodeTest -> ^( NODE nodeTest ) )
			// XPath.g:95:6: nodeTest
			{
			pushFollow(FOLLOW_nodeTest_in_nodeTestI521);
			nodeTest19=nodeTest();
			state._fsp--;

			stream_nodeTest.add(nodeTest19.getTree());
			// AST REWRITE
			// elements: nodeTest
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 95:15: -> ^( NODE nodeTest )
			{
				// XPath.g:95:18: ^( NODE nodeTest )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(NODE, "NODE"), root_1);
				adaptor.addChild(root_1, stream_nodeTest.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "nodeTestI"

